--- a/amilkar.html
+++ b/amilkar.html
@@ -25,7 +25,7 @@
             <br>
 
             <center>
-                <a class="btn green white-text" href="https://api.whatsapp.com/send?phone=+59167377467&text=Amilkar,+que+la+pases+bie+hoy,+Feliz+a%C3%B1o+nuevo!">FELICITAR&nbsp;A&nbsp;AMILKAR</a>
+                <a class="btn green white-text" href="https://api.whatsapp.com/send?phone=+59167377467&text=Amilkar,+mis+mejores+deseos+y+exitos,+Feliz+a%C3%B1o+nuevo!">FELICITAR&nbsp;A&nbsp;AMILKAR</a>
                 <br>
                 <br>
                 <br>
@@ -41,7 +41,7 @@
                 <br>
                 <br>
                 <br>
-                <a class="btn red white-text" href="https://api.whatsapp.com/send?phone=+59167377467&text=Amilkar,+este+es+el+código+y+contrase%C3%B1a+de+mi+cuenta+de+ahorros">Donar&nbsp;a&nbsp;AMILKAR</a>
+                <a class="btn red white-text" href="https://api.whatsapp.com/send?phone=+59167377467&text=Amilkar,+este+es+el+código+y+contrase%C3%B1a+de+mi+cuenta+de+ahorros:">Donar&nbsp;a&nbsp;AMILKAR</a>
             </center>
         </div>
     </main>
