--- a/amilkar.html
+++ b/amilkar.html
@@ -25,7 +25,7 @@
             <br>
 
             <center>
-                <a class="btn green white-text" href="https://api.whatsapp.com/send?phone=+59167377467&text=Amilkar,+mis+mejores+deseos+y+exitos,+Feliz+a%C3%B1o+nuevo!">FELICITAR&nbsp;A&nbsp;AMILKAR</a>
+                <a class="btn green white-text pulse" href="https://api.whatsapp.com/send?phone=+59167377467&text=Amilkar,+mis+mejores+deseos+y+exitos,+Feliz+a%C3%B1o+nuevo!">FELICITAR&nbsp;A&nbsp;AMILKAR</a>
                 <br>
                 <br>
                 <br>
