--- a/index.html
+++ b/index.html
@@ -192,6 +192,62 @@
                         </center>
                     </div>
                 </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af16.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af17.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af18.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af19.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af20.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af21.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af22.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column afiches">
+                    <div class="content">
+                        <center>
+                            <img src="images/afiches/af23.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
                 <div class="column logos">
                     <div class="content">
                         <center>
@@ -241,6 +297,13 @@
                         </center>
                     </div>
                 </div>
+                <div class="column logos">
+                    <div class="content">
+                        <center>
+                            <img src="images/logos/lg9.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
                 <div class="column otros">
                     <div class="content">
                         <center>
@@ -287,6 +350,20 @@
                     <div class="content">
                         <center>
                             <img src="images/otros/o7.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column otros">
+                    <div class="content">
+                        <center>
+                            <img src="images/otros/o8.png" class="materialboxed responsive-img" alt="galeria amilkar">
+                        </center>
+                    </div>
+                </div>
+                <div class="column otros">
+                    <div class="content">
+                        <center>
+                            <img src="images/otros/o9.png" class="materialboxed responsive-img" alt="galeria amilkar">
                         </center>
                     </div>
                 </div>
